# misis2025s-22-03-voevodin-e-o

./: .gitignore  CMakeLists.txt  CMakePresets.json  CUserMakePresets.json  README.md
prj.cw/: CMakeLists.txt
prj.cw/src/: extractor.cpp  extractor.hpp  generator.hpp  gldm.cpp  gldm.hpp  main.cpp
prj.lab/: CMakeLists.txt
prj.lab/lab01/: CMakeLists.txt  README.md  task01-01.cpp  task01-02.cpp
prj.lab/lab02/: CMakeLists.txt  README.md  task02.cpp
prj.lab/lab03/: CMakeLists.txt  README.md  task03.cpp
prj.lab/lab04/: CMakeLists.txt  README.md  task04-01.cpp  task04-02.cpp  task04-03.cpp
prj.lab/lab05/: CMakeLists.txt  README.md  task05.cpp
prj.lab/lab06/: CMakeLists.txt  README.md  task06.cpp
prj.lab/lab07/: CMakeLists.txt  README.md  task07.cpp
prj.lab/semcv/: CMakeLists.txt  semcv.cpp  semcv.hpp
prj.lab/test_images/: 0200x0100.3.real32.tiff  0200x0100.3.real64.tiff  0200x0100.3.sint08.tiff  0200x0100.3.sint16.tiff  0200x0100.3.sint32.tiff  0200x0100.3.uint08.tiff  0200x0100.3.uint16.tiff  task01.lst
